update rubocop spec and gemfile

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,8 @@ AllCops:
     - 'bin/*'
     - 'config/**/*'
     - 'test/*'
+    - 'Rakefile'
+    - 'Gemfile'
 
 
 Layout/AccessModifierIndentation:
